syntax = "proto3";  

option csharp_namespace = "DIDAPuppetClient";

service DIDAPuppetMasterService {   
	rpc sendFile(DIDAFileSendRequest) returns (DIDAFileSendReply); 
} 

message DIDAFileSendRequest {     
	string workers = 1;
	string operators = 2;
}  

message DIDAFileSendReply {     
	string ack = 1;
}